[project]
name = "clyft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Innokentii Kozlov", email = "innokentiikozlov@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
]

[project.scripts]
clyft = "clyft.main:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
